/*
 * Copyright (C) 2023 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";
package perfetto.protos;

import "protos/perfetto/trace/etw/etw.proto";

message EtwTraceEvent {
  optional uint64 timestamp = 1;
  optional uint32 cpu = 4;
  optional uint32 thread_id = 5;

  oneof event {
    CSwitchEtwEvent c_switch = 2;
    ReadyThreadEtwEvent ready_thread = 3;
    MemInfoEtwEvent mem_info = 6;
    FileIoCreateEtwEvent file_io_create = 7;
    FileIoDirEnumEtwEvent file_io_dir_enum = 8;
    FileIoInfoEtwEvent file_io_info = 9;
    FileIoReadWriteEtwEvent file_io_read_write = 10;
    FileIoSimpleOpEtwEvent file_io_simple_op = 11;
    FileIoOpEndEtwEvent file_io_op_end = 12;
  }
}
